filegroup(
    name = "static_files",
    srcs = [
        "BUILD.bazel",
        "defaults.bzl",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "extract_types.bzl",
        "filter_outputs.bzl",
        "@npm//@angular/build-tooling/bazel/api-gen:files",
        "@npm//@angular/build-tooling/bazel/api-golden:files",
        "@npm//@angular/build-tooling/bazel/app-bundling:files",
        "@npm//@angular/build-tooling/bazel/benchmark:files",
        "@npm//@angular/build-tooling/bazel/browsers:files",
        "@npm//@angular/build-tooling/bazel/constraints:files",
        "@npm//@angular/build-tooling/bazel/esbuild:files",
        "@npm//@angular/build-tooling/bazel/git-toolchain:files",
        "@npm//@angular/build-tooling/bazel/http-server:files",
        "@npm//@angular/build-tooling/bazel/integration:files",
        "@npm//@angular/build-tooling/bazel/karma:files",
        "@npm//@angular/build-tooling/bazel/map-size-tracking:files",
        "@npm//@angular/build-tooling/bazel/private:files",
        "@npm//@angular/build-tooling/bazel/remote-execution:files",
        "@npm//@angular/build-tooling/bazel/spec-bundling:files",
    ],
    visibility = ["//:npm"],
)
