load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["@npm//@angular/build-tooling/bazel:__subpackages__"],
    deps = [
        "@npm//@angular/build-tooling/bazel:node_modules/@types/node",
    ],
)

filegroup(
    name = "static_files",
    srcs = [
        "BUILD.bazel",
        "defaults.bzl",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "extract_types.bzl",
        "filter_outputs.bzl",
        "@npm//@angular/build-tooling/bazel/api-golden:files",
        "@npm//@angular/build-tooling/bazel/app-bundling:files",
        "@npm//@angular/build-tooling/bazel/browsers:files",
        "@npm//@angular/build-tooling/bazel/constraints:files",
        "@npm//@angular/build-tooling/bazel/esbuild:files",
        "@npm//@angular/build-tooling/bazel/git-toolchain:files",
        "@npm//@angular/build-tooling/bazel/http-server:files",
        "@npm//@angular/build-tooling/bazel/karma:files",
        "@npm//@angular/build-tooling/bazel/map-size-tracking:files",
        "@npm//@angular/build-tooling/bazel/private:files",
        "@npm//@angular/build-tooling/bazel/remote-execution:files",
        "@npm//@angular/build-tooling/bazel/spec-bundling:files",
        "@npm//@angular/build-tooling/bazel/ts_project:files",
    ],
    visibility = ["//:npm"],
)
