package(default_visibility = ["//visibility:public"])

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm//@angular/build-tooling/bazel/api-gen/extraction:files",
        "@npm//@angular/build-tooling/bazel/api-gen/manifest:files",
        "@npm//@angular/build-tooling/bazel/api-gen/rendering:files",
    ],
)
