load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "index.ts",
    "index_npm_packages.ts",
])

ts_project(
    name = "api-golden",
    srcs = [
        "find_entry_points.ts",
        "index_npm_packages.ts",
        "interop_module_mappings.ts",
        "path-normalize.ts",
        "test_api_report.ts",
    ],
    tsconfig = "@npm//@angular/build-tooling/bazel:tsconfig",
    deps = [
        "@npm//@angular/build-tooling/bazel:node_modules/@microsoft/api-extractor",
        "@npm//@angular/build-tooling/bazel:node_modules/@types/node",
        "@npm//@angular/build-tooling/bazel:node_modules/typescript",
    ],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["*"]),
)
