package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm//@angular/build-tooling/bazel/benchmark/component_benchmark:files",
        "@npm//@angular/build-tooling/bazel/benchmark/driver-utilities:files",
    ],
)
