load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files(["launcher_template.sh"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]),
)

ts_project(
    name = "server_lib",
    srcs = [
        "ibazel.mts",
        "main.mts",
        "server.mts",
    ],
    declaration = True,
    tsconfig = "@npm//@angular/build-tooling/bazel:tsconfig",
    deps = [
        "@npm//@angular/build-tooling/bazel:node_modules/@types/browser-sync",
        "@npm//@angular/build-tooling/bazel:node_modules/@types/node",
        "@npm//@angular/build-tooling/bazel:node_modules/@types/send",
        "@npm//@angular/build-tooling/bazel:node_modules/@types/yargs",
        "@npm//@angular/build-tooling/bazel:node_modules/browser-sync",
        "@npm//@angular/build-tooling/bazel:node_modules/send",
        "@npm//@angular/build-tooling/bazel:node_modules/yargs",
    ],
)

js_binary(
    name = "server_bin",
    data = [":server_lib"],
    entry_point = ":main.mjs",
)
