load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@npm//@angular/build-tooling/bazel/esbuild:index.bzl", "esbuild_esm_bundle")

package(default_visibility = ["@npm//@angular/build-tooling/bazel/markdown_to_html:__subpackages__"])

ts_library(
    name = "markdown_to_html_lib",
    srcs = glob(["*.ts"]),
    tsconfig = "@npm//@angular/build-tooling:tsconfig.json",
    deps = [
        "@npm//@angular/build-tooling/bazel/markdown_to_html/src",
        "@npm//@types/node",
    ],
)

esbuild_esm_bundle(
    name = "markdown_to_html_bundle",
    entry_point = ":index.ts",
    output = "bin.mjs",
    platform = "node",
    target = "es2022",
    deps = [
        ":markdown_to_html_lib",
    ],
)

# Action binary for the api_gen bazel rule.
nodejs_binary(
    name = "markdown_to_html",
    data = [":markdown_to_html_bundle"],
    entry_point = "bin.mjs",
    visibility = ["//visibility:public"],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["**/*"]) + [
        "@npm//@angular/build-tooling/bazel/markdown_to_html/src:files",
    ],
    visibility = ["//visibility:public"],
)
