load("@npm//@bazel/concatjs:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = "@npm//@angular/build-tooling:tsconfig.json",
    visibility = [
        "@npm//@angular/build-tooling/bazel/markdown_to_html:__pkg__",
        "@npm//@angular/build-tooling/bazel/markdown_to_html/test:__subpackages__",
    ],
    deps = [
        "@npm//@angular/build-tooling/bazel/api-gen/rendering:entities",
        "@npm//@bazel/runfiles",
        "@npm//@types/diff",
        "@npm//@types/node",
        "@npm//diff",
        "@npm//emoji-regex",
        "@npm//highlight.js",
        "@npm//html-entities",
        "@npm//marked",
    ],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
